--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
           context: .
           push: true
           platforms: linux/amd64,linux/arm64
-          file: ./8/jdk/slim-bullseye/Dockerfile-python
+          file: ./Dockerfile-python
           tags: xunchangguo/openjdk8:8u275-python
